--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
@@ -23,7 +24,8 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
