--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
+    "moment": "^2.29.3",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-content-loader": "^6.1.0",
