--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
+    "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
@@ -18,6 +19,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-content-loader": "^6.1.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
