--- a/client/package.json
+++ b/client/package.json
@@ -1,58 +1,75 @@
 {
-  "name": "pizza-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.11",
-    "@types/react": "^17.0.37",
-    "@types/react-datepicker": "^4.4.1",
-    "@types/react-dom": "^17.0.11",
-    "axios": "^0.24.0",
-    "classnames": "^2.3.1",
-    "formik": "^2.2.9",
-    "json-server": "^0.17.0",
-    "moment": "^2.29.3",
-    "node-sass": "^4.14.1",
-    "react": "^17.0.2",
-    "react-content-loader": "^6.1.0",
-    "react-datepicker": "^4.7.0",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "typescript": "^4.5.2",
-    "web-vitals": "^1.0.1",
-    "yup": "^0.32.11"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "server": "node server.js",
-    "json-server": "json-server --watch public/db.json --port=3001"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "pizza-app",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/jest": "^27.0.3",
+        "@types/node": "^16.11.11",
+        "@types/react": "^17.0.37",
+        "@types/react-datepicker": "^4.4.1",
+        "@types/react-dom": "^17.0.11",
+        "axios": "^0.24.0",
+        "classnames": "^2.3.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "formik": "^2.2.9",
+        "json-server": "^0.17.0",
+        "moment": "^2.29.3",
+        "node-sass": "^4.14.1",
+        "react": "^17.0.2",
+        "react-content-loader": "^6.1.0",
+        "react-datepicker": "^4.7.0",
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
+        "react-router-dom": "^6.0.2",
+        "react-scripts": "4.0.3",
+        "redux": "^4.1.2",
+        "redux-thunk": "^2.4.1",
+        "web-vitals": "^1.0.1",
+        "yup": "^0.32.11"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "server": "node server.js",
+        "json-server": "json-server --watch public/db.json --port=3001",
+        "lint": "eslint \"**/*.tsx\"",
+        "format": "prettier --write \"**/*.{tsx,json}\""
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.6.0",
+        "@typescript-eslint/parser": "^5.6.0",
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^2.7.1",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-react": "^7.30.0",
+        "eslint-plugin-react-hooks": "^4.5.0",
+        "eslint-plugin-react-redux": "^4.0.0",
+        "prettier": "2.6.2",
+        "typescript": "^4.7.3"
+    }
 }
